--- a/src/main/webapp/clearnlp.html
+++ b/src/main/webapp/clearnlp.html
@@ -1,10 +1,10 @@
 
-<script type="text/javascript" src="clearnlp_demo.js"></script>
+<script type="text/javascript" src="js/clearnlp_demo.js"></script>
 
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link href="clearnlp_demo.css" rel="stylesheet" media="screen"/>
+    <link href="css/clearnlp_demo.css" rel="stylesheet" media="screen"/>
     <style  type="text/css">
         #css_deptree_canvas
         {
