added js version

--- a/src/main/webapp/dotsvg.html
+++ b/src/main/webapp/dotsvg.html
@@ -42,7 +42,7 @@
     <!--<script src="http://mdaines.github.io/viz.js/viz.js"></script>-->
 
 
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/headjs/0.96/head.min.js'></script>
+    <script src='js/headjs_0.96_head.min.js'></script>
 
     <!--http://jsxml.net/-->
     <!--<link rel="stylesheet" type="text/css" href="http://jsxml.net/assets/class/Pub/css/app.css?2010052101">-->
@@ -51,12 +51,12 @@
 
     <script type='text/javascript'>
     <!-- load jquery and viz.js -->
-    head.js('http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js');
-    head.js('http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js');
-    head.js('http://mdaines.github.io/viz.js/viz.js');
+    head.js('js/jquery.min.js');
+    head.js('js/jquery-ui_1.11.4_jquery-ui.js');
+    head.js('js/viz.js_20150708_viz.js');
     <!-- load xslt process -->
-    head.js('http://jsxml.net/assets/class/Pub/js/app.js?2010052101');
-    head.js('https://rawgit.com/brandeis-nlp/jldservice/api2.0/src/main/webapp/lisp2dot.js');
+    head.js('js/jsxml_2010052101_app.js');
+    head.js('js/chunqi_20150708_lisp2dot.js');
 
     <!-- set ready -->
     head.ready(function() {
