--- a/src/main/webapp/dotsvg.html
+++ b/src/main/webapp/dotsvg.html
@@ -51,7 +51,7 @@
 
     <script type='text/javascript'>
     <!-- load jquery and viz.js -->
-    head.js('js/jquery.min.js');
+    head.js('js/jquery_1.11.3_jquery-1.11.3.min.js');
     head.js('js/jquery-ui_1.11.4_jquery-ui.js');
     head.js('js/viz.js_20150708_viz.js');
     <!-- load xslt process -->
