--- a/src/main/webapp/lapps.html
+++ b/src/main/webapp/lapps.html
@@ -8,77 +8,74 @@
 
     <!-- =============================================================================================================== -->
     <!-- Bootstrap core CSS -->
-    <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap theme -->
-    <link href="http://getbootstrap.com/dist/css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="css/bootstrap-theme.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="http://getbootstrap.com/examples/theme/theme.css" rel="stylesheet">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <link href="css/theme.css" rel="stylesheet">
+    <script src="js/jquery_1.11.3_jquery-1.11.3.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 
     <!-- =============================================================================================================== -->
-    <link rel="stylesheet" href="http://codemirror.net/lib/codemirror.css">
-    <link rel="stylesheet" href="http://codemirror.net/addon/scroll/simplescrollbars.css">
-    <link rel="stylesheet" href="https://codemirror.net/addon/display/fullscreen.css">
-    <link rel="stylesheet" href="https://codemirror.net/addon/dialog/dialog.css">
-    <link rel="stylesheet" href="https://codemirror.net/addon/search/matchesonscrollbar.css">
-    <link rel="stylesheet" href="https://codemirror.net/addon/fold/foldgutter.css" />
-    <script src="http://codemirror.net/lib/codemirror.js"></script>
-    <script src="http://codemirror.net/addon/scroll/simplescrollbars.js"></script>
+    <link rel="stylesheet" href="css/codemirror.css">
+    <link rel="stylesheet" href="css/simplescrollbars.css">
+    <link rel="stylesheet" href="css/fullscreen.css">
+    <link rel="stylesheet" href="css/dialog.css">
+    <link rel="stylesheet" href="css/matchesonscrollbar.css">
+    <link rel="stylesheet" href="css/foldgutter.css" />
+    <script src="js/codemirror.js"></script>
+    <script src="js/simplescrollbars.js"></script>
     <!--<link rel=stylesheet href="http://codemirror.net/doc/docs.css">-->
-    <script src="http://codemirror.net/mode/markdown/markdown.js"></script>
-    <script src="http://codemirror.net/mode/xml/xml.js"></script>
-    <script src="https://codemirror.net/addon/display/placeholder.js"></script>
-    <script src="https://codemirror.net/addon/display/fullscreen.js"></script>
-    <script src="https://codemirror.net/mode/javascript/javascript.js"></script>
-    <script src="https://codemirror.net/addon/selection/active-line.js"></script>
-    <script src="https://codemirror.net/addon/edit/matchbrackets.js"></script>
-    <script src="https://codemirror.net/mode/xml/xml.js"></script>
+    <script src="js/markdown.js"></script>
+    <script src="js/xml.js"></script>
+    <script src="js/placeholder.js"></script>
+    <script src="js/fullscreen.js"></script>
+    <script src="js/javascript.js"></script>
+    <script src="js/active-line.js"></script>
+    <script src="js/matchbrackets.js"></script>
     <!--<link rel="stylesheet" href="https://codemirror.net/theme/neat.css">-->
-    <script src="https://codemirror.net/addon/mode/overlay.js"></script>
-    <script src="https://codemirror.net/addon/mode/loadmode.js"></script>
-    <script src="https://codemirror.net/mode/meta.js"></script>
-    <script src="https://codemirror.net/mode/htmlmixed/htmlmixed.js"></script>
-    <script src="https://codemirror.net/addon/display/placeholder.js"></script>
-    <script src="https://codemirror.net/addon/dialog/dialog.js"></script>
-    <script src="https://codemirror.net/addon/search/searchcursor.js"></script>
-    <script src="https://codemirror.net/addon/search/search.js"></script>
-    <script src="https://codemirror.net/addon/scroll/annotatescrollbar.js"></script>
+    <script src="js/overlay.js"></script>
+    <script src="js/loadmode.js"></script>
+    <script src="js/meta.js"></script>
+    <script src="js/htmlmixed.js"></script>
+    <script src="js/dialog.js"></script>
+    <script src="js/searchcursor.js"></script>
+    <script src="js/search.js"></script>
+    <script src="js/annotatescrollbar.js"></script>
     <!--  https://codemirror.net/demo/folding.html  -->
-    <script src="https://codemirror.net/addon/fold/foldcode.js"></script>
-    <script src="https://codemirror.net/addon/fold/foldgutter.js"></script>
-    <script src="https://codemirror.net/addon/fold/brace-fold.js"></script>
-    <script src="https://codemirror.net/addon/fold/xml-fold.js"></script>
-    <script src="https://codemirror.net/addon/fold/markdown-fold.js"></script>
-    <script src="https://codemirror.net/addon/fold/comment-fold.js"></script>
-    <script src="https://codemirror.net/addon/search/matchesonscrollbar.js"></script>
-    <script src="https://raw.githubusercontent.com/cfinke/Typo.js/master/typo/typo.js"></script>
+    <script src="js/foldcode.js"></script>
+    <script src="js/foldgutter.js"></script>
+    <script src="js/brace-fold.js"></script>
+    <script src="js/xml-fold.js"></script>
+    <script src="js/markdown-fold.js"></script>
+    <script src="js/comment-fold.js"></script>
+    <script src="js/matchesonscrollbar.js"></script>
+    <script src="js/typo.js"></script>
 
     <!-- =============================================================================================================== -->
     <!-- Brat Visualisation ( http://brat.nlplab.org/embed.html#live) -->
-    <link rel="stylesheet" type="text/css" href="http://brat.nlplab.org/css/style.css"/>
-    <link rel="stylesheet" type="text/css" href="http://brat.nlplab.org/css/jquery-theme/jquery-ui-redmond.css"/>
-    <link rel="stylesheet" type="text/css" href="http://weaver.nlplab.org/~brat/demo/v1.3/style-vis.css"/>
+    <link rel="stylesheet" type="text/css" href="css/style.css"/>
+    <link rel="stylesheet" type="text/css" href="css/jquery-ui-redmond.css"/>
+    <link rel="stylesheet" type="text/css" href="css/style-vis.css"/>
 
-    <script type="text/javascript" src="http://weaver.nlplab.org/~brat/demo/v1.3/client/lib/head.load.min.js"></script>
+    <script type="text/javascript" src="js/head.load.min.js"></script>
     <!-- =============================================================================================================== -->
-    <script type="text/javascript" src="http://weaver.nlplab.org/~brat/demo/v1.3/client/lib/jquery.min.js"></script>
-    <script type="text/javascript" src="http://weaver.nlplab.org/~brat/demo/v1.3/client/lib/jquery.svg.min.js"></script>
-    <script type="text/javascript" src="http://weaver.nlplab.org/~brat/demo/v1.3/client/lib/jquery.svgdom.min.js"></script>
-    <script type="text/javascript" src="http://weaver.nlplab.org/~brat/demo/v1.3/client/src/configuration.js"></script>
-    <script type="text/javascript" src="http://weaver.nlplab.org/~brat/demo/v1.3/client/src/util.js"></script>
-    <script type="text/javascript" src="http://weaver.nlplab.org/~brat/demo/v1.3/client/src/annotation_log.js"></script>
-    <script type="text/javascript" src="http://weaver.nlplab.org/~brat/demo/v1.3/client/lib/webfont.js"></script>
-    <script type="text/javascript" src="http://weaver.nlplab.org/~brat/demo/v1.3/client/src/dispatcher.js"></script>
-    <script type="text/javascript" src="http://weaver.nlplab.org/~brat/demo/v1.3/client/src/url_monitor.js"></script>
-    <script type="text/javascript" src="http://weaver.nlplab.org/~brat/demo/v1.3/client/src/visualizer.js"></script>
-    <script type="text/javascript" src="http://brat.nlplab.org/js/lib/json2.js"></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/jquery.svg.min.js"></script>
+    <script type="text/javascript" src="js/jquery.svgdom.min.js"></script>
+    <script type="text/javascript" src="js/configuration.js"></script>
+    <script type="text/javascript" src="js/util.js"></script>
+    <script type="text/javascript" src="js/annotation_log.js"></script>
+    <script type="text/javascript" src="js/webfont.js"></script>
+    <script type="text/javascript" src="js/dispatcher.js"></script>
+    <script type="text/javascript" src="js/url_monitor.js"></script>
+    <script type="text/javascript" src="js/visualizer.js"></script>
+    <script type="text/javascript" src="js/json2.js"></script>
     <script type="text/javascript" src="http://l2.io/ip.js?var=userip"></script>
     <!-- =============================================================================================================== -->
     <!--// dot2svg-->
-    <script type="text/javascript" src="https://rawgit.com/brandeis-nlp/jldservice/api2.0/src/main/webapp/lisp2dot.js"></script>
-    <script type="text/javascript" src="http://mdaines.github.io/viz.js/viz.js"></script>
+    <script type="text/javascript" src="js/lisp2dot.js"></script>
+    <script type="text/javascript" src="js/viz.js"></script>
 
     <!--All the language services from Vassar College.-->
     <!--http://grid.anc.org:8080/service_manager/language-services-->
@@ -145,7 +142,7 @@
                     bratLocation + '/client/src/visualizer.js',
 
             // json2
-            'http://brat.nlplab.org/js/lib/json2.js'
+            'js/json2.js'
     );  */
     // >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> //
     // <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< //
