--- a/src/main/webapp/lapps.html
+++ b/src/main/webapp/lapps.html
@@ -128,18 +128,18 @@
     var bratLocation = 'http://weaver.nlplab.org/~brat/demo/v1.3';
     /* head.js(
             // External libraries
-                    bratLocation + '/client/lib/jquery.min.js',
-                    bratLocation + '/client/lib/jquery.svg.min.js',
-                    bratLocation + '/client/lib/jquery.svgdom.min.js',
+                    'js/jquery.min.js',
+                    'js/jquery.svg.min.js',
+                    'js/jquery.svgdom.min.js',
             // brat helper modules
-                    bratLocation + '/client/src/configuration.js',
-                    bratLocation + '/client/src/util.js',
-                    bratLocation + '/client/src/annotation_log.js',
-                    bratLocation + '/client/lib/webfont.js',
+                    'js/configuration.js',
+                    'js/util.js',
+                    'js/annotation_log.js',
+                    'js/webfont.js',
             // brat modules
-                    bratLocation + '/client/src/dispatcher.js',
-                    bratLocation + '/client/src/url_monitor.js',
-                    bratLocation + '/client/src/visualizer.js',
+                    'js/dispatcher.js',
+                    'js/url_monitor.js',
+                    'js/visualizer.js',
 
             // json2
             'js/json2.js'
@@ -147,9 +147,9 @@
     // >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> //
     // <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< //
     var webFontURLs = [
-                bratLocation + '/static/fonts/Astloch-Bold.ttf',
-                bratLocation + '/static/fonts/PT_Sans-Caption-Web-Regular.ttf',
-                bratLocation + '/static/fonts/Liberation_Sans-Regular.ttf'
+                'fonts/Astloch-Bold.ttf',
+                'fonts/PT_Sans-Caption-Web-Regular.ttf',
+                'fonts/Liberation_Sans-Regular.ttf'
     ];
 
     // >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> //
