--- a/src/main/webapp/lapps.html
+++ b/src/main/webapp/lapps.html
@@ -147,9 +147,9 @@
     // >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> //
     // <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< //
     var webFontURLs = [
-                'static/fonts/Astloch-Bold.ttf',
-                'static/fonts/PT_Sans-Caption-Web-Regular.ttf',
-                'static/fonts/Liberation_Sans-Regular.ttf'
+                'fonts/Astloch-Bold.ttf',
+                'fonts/PT_Sans-Caption-Web-Regular.ttf',
+                'fonts/Liberation_Sans-Regular.ttf'
     ];
 
     // >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> //
