--- a/src/main/webapp/used/clearnlp.html
+++ b/src/main/webapp/used/clearnlp.html
@@ -1,10 +1,10 @@
 
-<script type="text/javascript" src="js/clearnlp_demo.js"></script>
 
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link href="css/clearnlp_demo.css" rel="stylesheet" media="screen"/>
+    <link href="http://nlp.mathcs.emory.edu/clearnlp/demo/clearnlp_demo.css" rel="stylesheet" media="screen"/>
+    <script type="text/javascript" src="http://nlp.mathcs.emory.edu/clearnlp/demo/clearnlp_demo.js"></script>
     <style  type="text/css">
         #css_deptree_canvas
         {
