remove right reserve

--- a/src/main/webapp/cnlp.html
+++ b/src/main/webapp/cnlp.html
@@ -200,6 +200,6 @@
         (<nonsense>jame</nonsense>sp@<nonsense>cs.</nonsense>brandeis.<nonsense></nonsense>edu)
     </p>
 </footer>
-<p style="text-align:center">Copyright &copy; 2015 Brandeis University - All Rights Reserved</p>
+<!--<p style="text-align:center">Copyright &copy; 2015 Brandeis University - All Rights Reserved</p>-->
 </body>
 </html>
