not display svg div

--- a/src/main/webapp/lapps.html
+++ b/src/main/webapp/lapps.html
@@ -787,7 +787,7 @@
     <table align="center" class="table table-bordered table-striped responsive-utilities" align="center" style="width:800px;">
         <tr><th> Brat Display </th></tr>
         <tr><td height="100px"><div id="instantbratdisplay"></div></td></tr>
-        <tr><td><div id="instantdotdisplay" class="dotdisplaybox"></div></td></tr>
+        <tr><td><div id="instantdotdisplay" class="dotdisplaybox" style="display:none"></div></td></tr>
     </table>
     <table align="center" class="table table-bordered table-striped responsive-utilities" align="center" style="width:800px">
         <tr><th>Tool Output</th> <th> Save Output </th> </tr>
