--- a/src/main/webapp/cyto.html
+++ b/src/main/webapp/cyto.html
@@ -67,8 +67,8 @@
 
     <!-- =============================================================================================================== -->
 
-    <script src="cytoscape_tutorial/javascript/yeast_node.js"></script>
-    <script src="cytoscape_tutorial/javascript/yeast_edge.js"></script>
+    <!--<script src="cytoscape_tutorial/javascript/yeast_node.js"></script>-->
+    <!--<script src="cytoscape_tutorial/javascript/yeast_edge.js"></script>-->
     <!--<script src="cytoscape_tutorial/javascript/app.js"></script>-->
 
     <!-- =============================================================================================================== -->
@@ -243,8 +243,20 @@
 </head>
 
 
+<body>
 
-<h1  align="center">Online Environment of LappsGrid</h1>
+<p>
+
+</p>
+<ul class="nav nav-pills">
+    <li role="presentation"><a href="lapps.html">Lapps</a></li>
+    <li role="presentation"><a href="dotsvg.html">Dot2svg</a></li>
+    <li role="presentation"><a href="cnlp.html">CleanNLP</a></li>
+    <li role="presentation" class="active"><a href="cyto.html">BioPax</a></li>
+</ul>
+
+
+<h1  align="center">BioPax Visualization</h1>
 <p style="text-align:center;font-size: 16pt;">
     <rt> Brandeis University</rt>,<br />
     LappsGrid, <var>Version 0.0.1</var>,  July 2015</p>
