--- a/src/main/webapp/lapps.html
+++ b/src/main/webapp/lapps.html
@@ -668,6 +668,15 @@
     <!-- =============================================================================================================== -->
 </head>
 
+<body>
+<ul class="nav nav-pills">
+    <li role="presentation" class="active"><a href="lapps.html">Lapps</a></li>
+    <li role="presentation"><a href="dotsvg.html">Dot2svg</a></li>
+    <li role="presentation"><a href="cnlp.html">CleanNLP</a></li>
+    <li role="presentation"><a href="cyto.html">BioPax</a></li>
+</ul>
+
+
 <h1  align="center">Online Environment of LappsGrid</h1>
 <p style="text-align:center;font-size: 16pt;">
     <rt> Brandeis University</rt>,<br />
