--- a/src/main/webapp/cnlp.html
+++ b/src/main/webapp/cnlp.html
@@ -135,6 +135,13 @@
 </head>
 
 <body>
+<ul class="nav nav-pills">
+    <li role="presentation"><a href="lapps.html">Lapps</a></li>
+    <li role="presentation"><a href="dotsvg.html">Dot2svg</a></li>
+    <li role="presentation" class="active"><a href="cnlp.html">CleanNLP</a></li>
+    <li role="presentation"><a href="cyto.html">BioPax</a></li>
+</ul>
+
 
 <h1  align="center">ClearNLP Visualization</h1>
 <!--<p style="text-align:center;font-size: 16pt;">-->
