--- a/src/main/webapp/dotsvg.html
+++ b/src/main/webapp/dotsvg.html
@@ -128,8 +128,17 @@
         //=======================================================================//
     });
     </script>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-theme.min.css" rel="stylesheet">
 </head>
 
+<body>
+<ul class="nav nav-pills">
+    <li role="presentation"><a href="lapps.html">Lapps</a></li>
+    <li role="presentation" class="active"><a href="dotsvg.html">Dot2svg</a></li>
+    <li role="presentation"><a href="cnlp.html">CleanNLP</a></li>
+    <li role="presentation"><a href="cyto.html">BioPax</a></li>
+</ul>
 
 
 <h1  align="center">Dot to SVG Display</h1>
