added position to nav

--- a/src/main/webapp/cyto.html
+++ b/src/main/webapp/cyto.html
@@ -245,10 +245,7 @@
 
 <body>
 
-<p>
-
-</p>
-<ul class="nav nav-pills">
+<ul class="nav nav-pills" style="position:absolute; left:10px; top:10px;">
     <li role="presentation"><a href="lapps.html">Lapps</a></li>
     <li role="presentation"><a href="dotsvg.html">Dot2svg</a></li>
     <li role="presentation"><a href="cnlp.html">CleanNLP</a></li>
@@ -272,7 +269,7 @@
     <table align="center" class="table table-bordered table-striped responsive-utilities">
         <tr><th> BioPax </th></tr>
         <tr><td>
-        <textarea id="biopaxin">NOT Implemented Yet, TODO ...</textarea>
+        <textarea id="biopaxin"></textarea>
         <script>coverCodeMirror("biopaxin");</script>
     </td></tr></table>
     <!--.............................................................................................................--->
