--- a/src/main/webapp/lapps.html
+++ b/src/main/webapp/lapps.html
@@ -669,7 +669,7 @@
 </head>
 
 <body>
-<ul class="nav nav-pills">
+<ul class="nav nav-pills" style="position:absolute; left:10px; top:10px;">
     <li role="presentation" class="active"><a href="lapps.html">Lapps</a></li>
     <li role="presentation"><a href="dotsvg.html">Dot2svg</a></li>
     <li role="presentation"><a href="cnlp.html">CleanNLP</a></li>
