change dot svg name

--- a/src/main/webapp/dotsvg.html
+++ b/src/main/webapp/dotsvg.html
@@ -135,13 +135,13 @@
 <body>
 <ul class="nav nav-pills" style="position:absolute; left:10px; top:10px;">
     <li role="presentation"><a href="lapps.html">Lapps</a></li>
-    <li role="presentation" class="active"><a href="dotsvg.html">Dot2svg</a></li>
+    <li role="presentation" class="active"><a href="dotsvg.html">Lisp2Dot</a></li>
     <li role="presentation"><a href="cnlp.html">CleanNLP</a></li>
     <li role="presentation"><a href="cyto.html">BioPax</a></li>
 </ul>
 
 
-<h1  align="center">Dot to SVG Display</h1>
+<h1  align="center">Lisp to Dot & SVG Display</h1>
 
 
 
