--- a/src/main/webapp/lapps.html
+++ b/src/main/webapp/lapps.html
@@ -671,7 +671,7 @@
 <body>
 <ul class="nav nav-pills" style="position:absolute; left:10px; top:10px;">
     <li role="presentation" class="active"><a href="lapps.html">Lapps</a></li>
-    <li role="presentation"><a href="dotsvg.html">Dot2svg</a></li>
+    <li role="presentation"><a href="dotsvg.html">Lisp2Dot</a></li>
     <li role="presentation"><a href="cnlp.html">CleanNLP</a></li>
     <li role="presentation"><a href="cyto.html">BioPax</a></li>
 </ul>
