--- a/src/main/webapp/cyto.html
+++ b/src/main/webapp/cyto.html
@@ -247,7 +247,7 @@
 
 <ul class="nav nav-pills" style="position:absolute; left:10px; top:10px;">
     <li role="presentation"><a href="lapps.html">Lapps</a></li>
-    <li role="presentation"><a href="dotsvg.html">Dot2svg</a></li>
+    <li role="presentation"><a href="dotsvg.html">Lisp2Dot</a></li>
     <li role="presentation"><a href="cnlp.html">CleanNLP</a></li>
     <li role="presentation" class="active"><a href="cyto.html">BioPax</a></li>
 </ul>
