--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -24,7 +24,7 @@ Hello World!
     <a href="json.html">JSON(-LD) Validator</a>
 </p>
 <p>
-    <a href="visualization.html">visualization.html</a>
+    <a href="visualization.html">lapps.html</a>
 </p>
 
 
