fix pos not displayed

--- a/src/main/webapp/lapps.html
+++ b/src/main/webapp/lapps.html
@@ -879,11 +879,11 @@ if (isNer) {
        }
 }
 
-if (isTagger) {
+//if (isTagger) {
     targetEntities += lastViewAnns.select{&.features.pos != null}.unique{ &.start + " " + &.end }.foreach {
         [&.id, %.toUpper(&.features.pos), [[&.start.toInteger(), &.end.toInteger()]]]
     }
-}
+//}
 
 text  targetText
 
