--- a/src/main/webapp/used/lapps_local.html
+++ b/src/main/webapp/used/lapps_local.html
@@ -13,7 +13,8 @@
     <link href="css/bootstrap-theme.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="css/theme.css" rel="stylesheet">
-    <script src="js/jquery_1.11.3_jquery-1.11.3.min.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 
     <!-- =============================================================================================================== -->
@@ -33,11 +34,13 @@
     <script src="js/javascript.js"></script>
     <script src="js/active-line.js"></script>
     <script src="js/matchbrackets.js"></script>
+    <script src="js/xml.js"></script>
     <!--<link rel="stylesheet" href="https://codemirror.net/theme/neat.css">-->
     <script src="js/overlay.js"></script>
     <script src="js/loadmode.js"></script>
     <script src="js/meta.js"></script>
     <script src="js/htmlmixed.js"></script>
+    <script src="js/placeholder.js"></script>
     <script src="js/dialog.js"></script>
     <script src="js/searchcursor.js"></script>
     <script src="js/search.js"></script>
@@ -55,22 +58,22 @@
     <!-- =============================================================================================================== -->
     <!-- Brat Visualisation ( http://brat.nlplab.org/embed.html#live) -->
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
-    <link rel="stylesheet" type="text/css" href="css/jquery-ui-redmond.css"/>
+    <link rel="stylesheet" type="text/css" href="css/jquery-theme/jquery-ui-redmond.css"/>
     <link rel="stylesheet" type="text/css" href="css/style-vis.css"/>
 
-    <script type="text/javascript" src="js/head.load.min.js"></script>
+    <script type="text/javascript" src="http://weaver.nlplab.org/~brat/demo/v1.3/client/lib/head.load.min.js"></script>
     <!-- =============================================================================================================== -->
-    <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/jquery.svg.min.js"></script>
-    <script type="text/javascript" src="js/jquery.svgdom.min.js"></script>
-    <script type="text/javascript" src="js/configuration.js"></script>
-    <script type="text/javascript" src="js/util.js"></script>
-    <script type="text/javascript" src="js/annotation_log.js"></script>
-    <script type="text/javascript" src="js/webfont.js"></script>
-    <script type="text/javascript" src="js/dispatcher.js"></script>
-    <script type="text/javascript" src="js/url_monitor.js"></script>
-    <script type="text/javascript" src="js/visualizer.js"></script>
-    <script type="text/javascript" src="js/json2.js"></script>
+    <script type="text/javascript" src="http://weaver.nlplab.org/~brat/demo/v1.3/client/lib/jquery.min.js"></script>
+    <script type="text/javascript" src="http://weaver.nlplab.org/~brat/demo/v1.3/client/lib/jquery.svg.min.js"></script>
+    <script type="text/javascript" src="http://weaver.nlplab.org/~brat/demo/v1.3/client/lib/jquery.svgdom.min.js"></script>
+    <script type="text/javascript" src="http://weaver.nlplab.org/~brat/demo/v1.3/client/src/configuration.js"></script>
+    <script type="text/javascript" src="http://weaver.nlplab.org/~brat/demo/v1.3/client/src/util.js"></script>
+    <script type="text/javascript" src="http://weaver.nlplab.org/~brat/demo/v1.3/client/src/annotation_log.js"></script>
+    <script type="text/javascript" src="http://weaver.nlplab.org/~brat/demo/v1.3/client/lib/webfont.js"></script>
+    <script type="text/javascript" src="http://weaver.nlplab.org/~brat/demo/v1.3/client/src/dispatcher.js"></script>
+    <script type="text/javascript" src="http://weaver.nlplab.org/~brat/demo/v1.3/client/src/url_monitor.js"></script>
+    <script type="text/javascript" src="http://weaver.nlplab.org/~brat/demo/v1.3/client/src/visualizer.js"></script>
+    <script type="text/javascript" src="http://brat.nlplab.org/js/lib/json2.js"></script>
     <script type="text/javascript" src="http://l2.io/ip.js?var=userip"></script>
     <!-- =============================================================================================================== -->
     <!--// dot2svg-->
@@ -107,25 +110,17 @@
             background-clip: padding-box;
         }
 
-
-
+        #instantdotdisplay {
+            display:none;
+            width:800px;
+            height:400px;
+            overflow:scroll;
+        }
         #instantdotdisplay svg {
             width: auto;
             height: auto;
             border: 1px solid #7fa2ff;
             font-size: 15px;
-        }
-
-        .dotdisplaybox {
-            width:800px;
-            height:400px;
-            overflow:scroll;
-        }
-
-        .dotdisplayfullscreen {
-            width:100%;
-            height:100%;
-            z-index:1000;
         }
     </style>
 
@@ -136,28 +131,28 @@
     var bratLocation = 'http://weaver.nlplab.org/~brat/demo/v1.3';
     /* head.js(
             // External libraries
-                    'js/jquery.min.js',
-                    'js/jquery.svg.min.js',
-                    'js/jquery.svgdom.min.js',
+                    bratLocation + '/client/lib/jquery.min.js',
+                    bratLocation + '/client/lib/jquery.svg.min.js',
+                    bratLocation + '/client/lib/jquery.svgdom.min.js',
             // brat helper modules
-                    'js/configuration.js',
-                    'js/util.js',
-                    'js/annotation_log.js',
-                    'js/webfont.js',
+                    bratLocation + '/client/src/configuration.js',
+                    bratLocation + '/client/src/util.js',
+                    bratLocation + '/client/src/annotation_log.js',
+                    bratLocation + '/client/lib/webfont.js',
             // brat modules
-                    'js/dispatcher.js',
-                    'js/url_monitor.js',
-                    'js/visualizer.js',
+                    bratLocation + '/client/src/dispatcher.js',
+                    bratLocation + '/client/src/url_monitor.js',
+                    bratLocation + '/client/src/visualizer.js',
 
             // json2
-            'js/json2.js'
+            'http://brat.nlplab.org/js/lib/json2.js'
     );  */
     // >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> //
     // <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< //
     var webFontURLs = [
-                'fonts/Astloch-Bold.ttf',
-                'fonts/PT_Sans-Caption-Web-Regular.ttf',
-                'fonts/Liberation_Sans-Regular.ttf'
+                bratLocation + '/static/fonts/Astloch-Bold.ttf',
+                bratLocation + '/static/fonts/PT_Sans-Caption-Web-Regular.ttf',
+                bratLocation + '/static/fonts/Liberation_Sans-Regular.ttf'
     ];
 
     // >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> //
@@ -286,9 +281,6 @@
             dotDisplay.html("");
             dotDisplay.html(svg);
             dotDisplay.show();
-            dotDisplay.dblclick(function(){
-                $(this).toggleClass("dotdisplayfullscreen").toggleClass("dotdisplaybox");
-            });
         } else {
             var dotDisplay = $('#' + dotDisplayId);
             dotDisplay.html("");
@@ -369,7 +361,7 @@
     // >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> //
     // <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<  //
     var wsdls = {
-        json2json : 'http://eldrad.cs-i.brandeis.edu:8282/json2json/0.3.3-SNAPSHOT/services/Json2JsonWS?wsdl'
+        json2json : 'http://eldrad.cs-i.brandeis.edu:8282/json2json/0.3.0-SNAPSHOT/services/Json2JsonWS?wsdl'
     }
 
 
@@ -655,7 +647,6 @@
         });
 
         var jquery2 = jQuery.noConflict( true );
-
     // >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> //
     });  // {head.ready}
     // <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<  //
@@ -667,15 +658,6 @@
 
     <!-- =============================================================================================================== -->
 </head>
-
-<body>
-<ul class="nav nav-pills" style="position:absolute; left:10px; top:10px;">
-    <li role="presentation" class="active"><a href="lapps.html">Lapps</a></li>
-    <li role="presentation"><a href="dotsvg.html">Lisp2Dot</a></li>
-    <li role="presentation"><a href="cnlp.html">CleanNLP</a></li>
-    <li role="presentation"><a href="cyto.html">BioPax</a></li>
-</ul>
-
 
 <h1  align="center">Online Environment of LappsGrid</h1>
 <p style="text-align:center;font-size: 16pt;">
@@ -796,7 +778,7 @@
     <table align="center" class="table table-bordered table-striped responsive-utilities" align="center" style="width:800px;">
         <tr><th> Brat Display </th></tr>
         <tr><td height="100px"><div id="instantbratdisplay"></div></td></tr>
-        <tr><td><div id="instantdotdisplay" class="dotdisplaybox" style="display:none"></div></td></tr>
+        <tr><td><div id="instantdotdisplay"></div></td></tr>
     </table>
     <table align="center" class="table table-bordered table-striped responsive-utilities" align="center" style="width:800px">
         <tr><th>Tool Output</th> <th> Save Output </th> </tr>
@@ -820,7 +802,7 @@
 <!-- =============================================================================================================== -->
 
 <!-- =============================================================================================================== -->
-<div style="display:none">
+<div>
 <h2 align="center"><span class="label label-primary" style="width:800px;display:inline-block;">LappsGrid JSON 2 Brat JSON</span></h2>
 <p>
 <table align="center">
@@ -829,71 +811,32 @@
         <td><textarea id="json2jsondsl_source" style="width:400px;height:300px;">{}</textarea><script>coverCodeMirror("json2jsondsl_source");</script>
         </td>
         <td><textarea id="json2jsondsl_template" style="width:400px;height:300px;">{
-def discriminator = &:discriminator
-def lastView = &:payload.views[-1]
-if (lastView == null) return
+         def idx = 0
+         def lastview = &$payload.views[-1]
+         def lastviewanns = lastview==null?null:lastview.annotations
+         def lastviewfeatures = lastviewanns==null?null:lastviewanns.features
+         def parse = lastviewfeatures == null? null:lastviewfeatures.select{&.penntree!=null}.penntree
+         def coref = lastviewanns.select{&."@type" != null && &."@type".contains("Coreference")}.features.mentions
+         def markables = lastviewanns.select{&."@type" != null && &."@type".contains("Markable") && coref.toString().contains(&.id)}
 
-def isText = %.has( &:discriminator,  "http://vocab.lappsgrid.org/ns/media/text")
-def isLifTex = %.has( &:discriminator,  "http://vocab.lappsgrid.org/ns/media/jsonld#lif")
-def isCoref = %.has(lastView.metadata.contains,  "Coreference")
-def isDepParser = %.has(lastView.metadata.contains,  "DependencyStructure")
-def isParser = %.has(lastView.metadata.contains,  "Constituent")
-def isNer = %.has(lastView.metadata.contains,  "NamedEntity")
-def isTagger = %.has(lastView.metadata.contains,  "Token#pos")
+         text &$payload.text."@value" +  (parse == null||parse.size == 0||parse[0]==null?"":"\n~~~~\n"+parse[0])
 
-def lastViewAnns = lastView.annotations
-if (lastViewAnns == null) return
+         relations (lastviewanns.select{&."@type" != null && &."@type".contains("DependencyStructure")}.features.dependencies
+                    .flatten().foreach{
+                    ["D${idx++}", &.label, [["Governor", &.features.governor], ["Dependent", &.features.dependent]]]
+                    })
 
+         equivs (lastviewanns.select{&."@type" != null && &."@type".contains("Coreference")}.features
+                    .flatten().foreach{
+                                     ["*", "Coreference", &.mentions[0], &.mentions[1]]
+                                     })
 
-def targetText = ""
-def targetRelations = []
-def targetEquivs = []
-def targetEntities = []
-
-if (isText) targetText = &:payload
-if (isLifTex) targetText = &:payload.text."@value"
-
-if (isParser) {
-    targetText +=  "\n~~~\n" + lastViewAnns.select{ %.has(&."@type", "PhraseStructure") }.features.penntree[0]
-}
-
-if (isDepParser) {
-    def dependencies = lastViewAnns.select{%.has(&."@type", "DependencyStructure")}.features.dependencies.flatten()
-    targetRelations = lastViewAnns.select{ &.id in dependencies}.foreach {
-        [&.id, &.label, [["Governor", &.features.governor], ["Dependent", &.features.dependent]]]
-    }
-}
-
-if (isCoref) {
-    def corefFeatures = lastViewAnns.select{ %.has(&."@type", "Coreference") }.features
-    targetEquivs += corefFeatures.flatten().foreach { ["*", "Coreference", &.mentions[0], &.mentions[1]] }
-
-    targetEntities += lastViewAnns.select{%.has(&."@type", "Markable") && (&.id in corefFeatures.mentions.flatten())}.unique{&.start+" "+&.end}.foreach{
-                          [&.id, "Mention", [[&.start.toInteger(), &.end.toInteger()]]]
-    }
-}
-
-if (isNer) {
-       targetEntities += lastViewAnns.select{ %.hasAny(&."@type", "Date", "Person", "Location", "Organization" )}.unique{ &.start + " " + &.end }.foreach {
-            [&.id, %.lastWord(&."@type"), [[&.start.toInteger(), &.end.toInteger()]]]
-       }
-}
-
-//if (isTagger) {
-    targetEntities += lastViewAnns.select{&.features.pos != null}.unique{ &.start + " " + &.end }.foreach {
-        [&.id, %.toUpper(&.features.pos), [[&.start.toInteger(), &.end.toInteger()]]]
-    }
-//}
-
-text  targetText
-
-relations targetRelations
-
-equivs (targetEquivs)
-
-entities (targetEntities)
-}
-</textarea><script>coverCodeMirror("json2jsondsl_template");</script></td>
+         entities (lastviewanns.unique{&.start+" "+&.end}.select{&.features != null && (&.features.category != null || &.features.pos != null)}.foreach{
+           [&.id == null?"T${idx++}":&.id, &.features.category != null?&.features.category.trim().toUpperCase():&.features.pos.trim().toUpperCase(), [[&.start.toInteger(), &.end.toInteger()]]]
+         } + markables.foreach{
+           [&.id == null?"M${idx++}":&.id, "Mention", [[&.start.toInteger(), &.end.toInteger()]]]
+         })
+}</textarea><script>coverCodeMirror("json2jsondsl_template");</script></td>
         <td><input type="button" value="Transform"
                    onclick="execService(wsdls['json2json'], 'json2jsondsl', ['json2jsondsl_source', 'json2jsondsl_template'], 'json2jsondsl_result')" /></td>
         <td><textarea  id="json2jsondsl_result"  style="width:400px;height:300px;"></textarea>
